--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:./data/dio
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = update
+
+application.description = Projeto criado para o bootcamp DIO - Santander / Backend
+application.version = '1.0'
 
